Primeros cambios en front

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -11144,7 +11144,7 @@ header.masthead .site-heading {
 }
 header.masthead .page-heading,
 header.masthead .site-heading {
-  text-align: center;
+  text-align: left;
 }
 header.masthead .page-heading h1, header.masthead .page-heading .h1,
 header.masthead .site-heading h1,
@@ -11162,6 +11162,7 @@ header.masthead .site-heading .subheading {
 }
 header.masthead .post-heading h1, header.masthead .post-heading .h1 {
   font-size: 2.25rem;
+  text-align: left;
 }
 header.masthead .post-heading .meta,
 header.masthead .post-heading .subheading {
@@ -11252,3 +11253,14 @@ header.masthead .site-heading .h1 {
 .btn-outline-light {
   padding: 4px 8px;
 }
+
+.btn-outline-info {
+  color: #0085A1;
+  border-color: #0085A1;
+  
+}
+
+#contenedor{
+  margin: 0 auto;
+}
+
