--- a/templates/blog/about.html
+++ b/templates/blog/about.html
@@ -7,11 +7,11 @@
         <!-- Page Header-->
         <header class="masthead" style="background-image: url({% static 'assets/img/about-bg.jpg' %})">
             <div class="container position-relative px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5 justify-content-center">
+                <div class="row gx-4 gx-lg-5 text-align-left">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="page-heading">
-                            <h1>Acerca de</h1>
-                            
+                            <h1 class="text-md-left">Acerca de</h1>   
+                            <span class="subheading">dfdsfsfo</span>
                         </div>
                     </div>
                 </div>
