--- a/templates/blog/home.html
+++ b/templates/blog/home.html
@@ -5,13 +5,13 @@
 {% block content %}
     <!-- Page Header-->
   
-    <header class="masthead" style="background-image: url({% static 'assets/img/puente.jpg' %})">
+    <header class="masthead" style="background-image: url({% static 'assets/img/viajero_1.jpg' %})">
         <div class="container position-relative px-4 px-lg-5">
-            <div class="row gx-4 gx-lg-5 justify-content-center">
+            <div class="row gx-4 gx-lg-5 text-align-left">
                 <div class="col-md-10 col-lg-8 col-xl-7">
                     <div class="page-heading">
-                        <h1>Conociendo Argentina</h1>
-                        <span class="subheading">Blog de viajes colaborativo</span>
+                        <h1 class="text-md-left">Technómada</h1>
+                        <span class="subheading">Blog de viajes y tecnología</span>
                     </div>
                 </div>
             </div>
@@ -38,9 +38,10 @@
                 <hr>
             {% endfor %}
             
+            <!--
             <div class="clearfix">
                 <a class="btn btn-primary float-right" href="#">Older Posts &rarr;</a>
-            </div>
+            </div>-->
 
         </div>
     </div>
