--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -6,11 +6,11 @@
     <!-- Page Header-->
         <header class="masthead" style="background-image: url({% static 'assets/img/escritura.jpg' %})">
             <div class="container position-relative px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5 justify-content-center">
+                <div class="row gx-4 gx-lg-5 text-align-left">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="page-heading">
-                            <h1>Artículos</h1>
-                            <span class="subheading"></span>
+                            <h1 class="text-md-left">Artículos</h1>  
+                            <span class="subheading">dfdsfsfo</span>
                         </div>
                     </div>
                 </div>
@@ -52,7 +52,7 @@
                     <div class="col-md-10">
                         <div class="card-body">
                             <h5 class="card-title">{{ post.autor.username }}</h5>
-                            <p class="small text muted">
+                            <p class="card-text">
                                 <a href="{{ post.autor.profile.website_url}}">Linkedin</a> 
                             </p>
                             <p class="card-text">{{ post.autor.profile.bio }}</p>
