--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -5,10 +5,11 @@
         <!-- Page Header-->
         <header class="masthead" style="background-image: url({% static 'assets/img/chica_notebook.jpg' %})">
             <div class="container position-relative px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5 justify-content-center">
+                <div class="row gx-4 gx-lg-5 text-align-left">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="page-heading">
-                            <h1>Blog</h1>
+                            <h1 class="text-md-left">Blog</h1>  
+                            <span class="subheading">dfdsfsfo</span> 
                         </div>
                     </div>
                 </div>
