--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -19,8 +19,8 @@
         <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     </head>
     <body>
+
         <!-- Navigation-->
-        
         <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
             <div class="container px-4 px-lg-5">
                 <a class="navbar-brand" href="{% url 'home' %}">Technómada</a>
@@ -37,6 +37,7 @@
                     </ul>
                 </div>
 
+        <!-- Condicional items Navigation-->
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto py-4 py-lg-0">
                         {% if user.is_authenticated %}
@@ -58,8 +59,6 @@
                             <li class="nav-item">
                                 <a type="button" class="nav-link px-lg-3 py-3 py-lg-4 border border-light" href="{% url 'login' %}">Login</a>
                             </li>
-                            
-
                         {% endif %}
                     </ul>
                 </div>
@@ -69,6 +68,8 @@
 
 
     {% block content %}
+
+    <!--
         <!-- Page Header-->
         <header class="masthead" style="background-image: url({% static 'assets/img/ruta-40.jpg' %})">
             <div class="container position-relative px-4 px-lg-5">
@@ -105,7 +106,7 @@
         </div>
      <!-- /.sidebar -->
   </aside>
-  
+
         <!-- Main Content-->
         <div class="container px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 justify-content-center">
@@ -185,5 +186,29 @@
         <script src='{% static "https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" %'></script>
         <!-- Core theme JS-->
         <script src='{% static "js/scripts.js" %}'></script>
+        
+        <!-- CKEDITOR-->
+        <script type="text/javascript">
+            CKEDITOR.replace( 'comment', 
+         
+                  {
+                 on :
+                 {
+                     instanceReady : function( ev )
+                     {
+                         // Output paragraphs as <p>Text</p>.
+                         this.dataProcessor.writer.setRules( 'p',
+                             {
+                                 indent : false,
+                                 breakBeforeOpen : false,
+                                 breakAfterOpen : false,
+                                 breakBeforeClose : false,
+                                 breakAfterClose :false
+                             });
+                     }
+                 }
+             });
+         </script>
+    
     </body>
 </html>
