--- a/templates/blog/home.html
+++ b/templates/blog/home.html
@@ -18,32 +18,14 @@
         </div>
     </header>
 
-    <br/>  
-    <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-            {% for post in posts %}
-                <div class="post-preview">
-                    <a href="{{post.id}}">
-                        <h2 class="post-title">
-                            {{ post.titulo }}
-                        </h2>
-                        <h3 class="post-subtitle">
-                            {{post.contenido|truncatechars:60}}
-                        </h3>
-                    </a>
-                    <p class="post-meta">Posted by
-                        <a href="#">Start Bootstrap</a>
-                        on September 24, 2019</p>
-                </div>
-                <hr>
-            {% endfor %}
+    
+        
+
             
             <!--
             <div class="clearfix">
-                <a class="btn btn-primary float-right" href="#">Older Posts &rarr;</a>
-            </div>-->
-
-        </div>
-    </div>
+                <a class="btn btn-primary float-right" href="{% url 'post_list' %}">Ver publicaciones anteriores &rarr;</a>
+            </div>
+            -->
 
 {% endblock content %}
