--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -16,38 +16,43 @@
                 </div>
             </div>
         </header>
-        <br/>  
-    
+        <br/>   
+
         
     <!-- Container Post-->
     <main role= "main" class="container">
         <div class="Row">
             <div class="col-md-8 blog-main">
                 <h1 class='posttitle loader'>{{ post.titulo }}</h1>
+                <p class="post-meta">
                     <small>Por:
                         {{ post.autor.username }}
                         {{ post.autor.fecha }}
-                    
+                    </small></p>
                     {% if post.fecha_publicacion %}
                         <div class="date postdate">
                             {{ post.fecha_publicacion }}
                         </div>
                     {% else %}
-                        <a class="btn btn-success" href="{% url 'post_publish' pk=post.pk %}">Publish</a>
+                        <a class="btn btn-success" href="{% url 'post_publish' pk=post.pk %}">Publicar</a>
                     {% endif %}
                 <br/> 
-                    <img src=" {{ post.imagen_portada.url }}",  width="640" height="425"> 
-                    <p class='postcontent'>{{ post.contenido|safe|linebreaksbr }}</p>
+                    <img class="img-fluid" src=" {{ post.imagen_portada.url }}"> 
+                    <p class='postcontent'>{{ post.contenido|safe }}</p>
                     {% if user.is_authenticated %}
-                        <a class="btn btn-primary" href="{% url 'post_edit' pk=post.pk %}"><i class="bi bi-pen"></i></a>  
+                        <a class="btn btn-primary" href="{% url 'post_edit' pk=post.pk %}"><i class="bi bi-pen">Editar post</i></a>  
+                        <a class="btn btn-primary" href="{% url 'post_remove' pk=post.pk %}"><i class="bi bi-pen"></i>Eliminar post</a>  
                     {% endif %}  
-                <br/> 
+                <br><br>
+            </div>
+        </div>    
 
-    <!-- Container Post-->         
+
+        <!--Container Post         
             <div class="card mb-2">
                 <div class="row no-gutters">
                     <div class="col-md-2">
-                        <img src="{{ post.autor.profile.profile_picture.url }}" class="card-img">
+                        <img src="{{ post.autor.profile.profile_picture.url }}" class="card-img" >
                     </div>
                     <div class="col-md-10">
                         <div class="card-body">
@@ -59,9 +64,9 @@
                         </div>
                     </div>
                 </div>       
-            </div>
+            </div>-->
 
-        </div>
-        <br/>  <br/>  <br/> 
+    
+
 
 {% endblock content %}
