--- a/templates/blog/post_draft_list.html
+++ b/templates/blog/post_draft_list.html
@@ -1,12 +1,38 @@
 {% extends "blog/base.html" %}
 
+{% load static %}
+
 {% block content %}
-    {% for post in post_list %}
-        <div class="post">
-            <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.titulo }}</a></h1>
-            <p class="date">Creado el: {{ post.fecha_publicacion|date:'d-m-Y' }}</p>
-            <p>{{ post.text|safe|linebreaksbr }}</p>
+
+    <!-- Page Header-->
+    <header class="masthead" style="background-image: url({% static 'assets/img/lapizborrador.jpg' %})">
+        <div class="container position-relative px-4 px-lg-5">
+            <div class="row gx-4 gx-lg-5 text-align-left">
+                <div class="col-md-10 col-lg-8 col-xl-7">
+                    <div class="page-heading">
+                        <h1 class="text-md-left">Borradores</h1>  
+                        
+                    </div>
+                </div>
+            </div>
         </div>
-    {% endfor %}
+    </header>
+
+
+    <main class="mb-4">
+        <div class="container px-4 px-lg-5">
+            <div class="row gx-4 gx-lg-5 justify-content-center">
+                <div class="col-md-10 col-lg-8 col-xl-7">
+                    {% for post in post_list %}
+                        <div class="post">
+                            <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.titulo }}</a></h1>
+                            <p class="date">Creado el: {{ post.fecha_creacion|date:'d-m-Y' }}</p>
+                            <p>{{ post.text|safe|linebreaksbr }}</p>
+                        </div>
+                    {% endfor %}
+                    </div>
+                </div>
+            </div>
+        </div>
     
 {% endblock %}
