--- a/templates/blog/post_form.html
+++ b/templates/blog/post_form.html
@@ -4,13 +4,13 @@
 
 
     {% if user.is_authenticated %}
-        <!-- Page Header-->
+    <!-- Page Header-->
             <header class="masthead" style="background-image: url({% static 'assets/img/notebook.jpg' %})">
                 <div class="container position-relative px-4 px-lg-5">
                     <div class="row gx-4 gx-lg-5 justify-content-center">
                         <div class="col-md-10 col-lg-8 col-xl-7">
                             <div class="page-heading">
-                                <h1>Nuevo artículo</h1>
+                                <h1>Editar artículo</h1>
                             </div>
                         </div>
                     </div>
