--- a/templates/profiles/change_password.html
+++ b/templates/profiles/change_password.html
@@ -1,18 +1,57 @@
-{% extends "blog/base.html" %}
 
-{% block title %}Cambio de contraseña{% endblock title %}
-    
+{% extends "profiles/base_admin.html" %}
+
+{% load static %}
+
 {% block content %}
 
+<h1 class="mt-4">Cambiar Contraseña</h1>
+<ol class="breadcrumb mb-4">
+    <li class="breadcrumb-item   active">Dashboard</li>
+</ol>
 
-    <h1>Cambio de contraseña</h1>
-    <br/><br/>
-    <div class="form-group">
+<div class="card mb-4">
+    <div class="card-header">
+        <i class="fas fa-table me-1"></i>
+        Formulario
+    </div>
+    <div class="card-body">
+        <!-- Inicio Formulario -->    
+        {% if form.errors %}
+        <div class="card bg-warning text-white mb-4">
+            <div class="card-body"><i class="fa fa-warning"></i> Contraseña no validos.</div>
+        </div>
+        {% endif %}                                  
         <form method="POST">
             {% csrf_token %}
-            {{ form.as_p }}
+            <!--  -->  
+
+                <div class="row mb-3">
+                    <div class="col-md-6">
+                        <div class="form-floating mb-3 mb-md-0">
+                            <input type="password" name="old_password" autocomplete="current-password" autofocus required id="id_old_password" class="form-control" placeholder="password Actual" />
+                            <label for="inputPassword">Password Actual</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="row mb-3">
+                    <div class="col-md-6">
+                        <div class="form-floating mb-3 mb-md-0">
+                            <input type="password" name="new_password1" autocomplete="new-password" required id="id_new_password1" class="form-control" placeholder="password" />
+                            <label for="inputPassword">Nueva Password</label>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-floating mb-3 mb-md-0">
+                            <input type="password" name="new_password2" autocomplete="new-password" required id="id_new_password2" class="form-control" placeholder="Confirme password" />
+                            <label for="inputPasswordConfirm">Confirmar Password</label>
+                        </div>
+                    </div>
+                </div>
             <button class="btn btn-secondary">Guardar cambios</button>
+
     </div>
+</div>
 
-
-{% endblock %}
+  
+{% endblock content %}
