--- a/templates/profiles/password_success.html
+++ b/templates/profiles/password_success.html
@@ -1,12 +1,14 @@
-{% extends "blog/base.html" %}
+{% extends "profiles/base_admin.html" %}
 
-{% block title %}Cambio de contraseña exitosa{% endblock title %}
-    
+{% load static %}
+
 {% block content %}
 
+<h1 class="mt-4">Tu contraseña se ha modificado correctamente</h1>
+<ol class="breadcrumb mb-4">
+    <li class="breadcrumb-item   active">Dashboard</li>
+</ol>
 
-    <h1>Tu contraseña se ha modificado correctamente</h1>
-    <br/><br/>
-    
 
-{% endblock %}
+  
+{% endblock content %}
