--- a/templates/registration/base_registration.html
+++ b/templates/registration/base_registration.html
@@ -1,18 +1,23 @@
+{% load static %}
+{% if not user.is_authenticated %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        {% load static %}
+
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Blog</title>
-        <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
+        <link href="{% static 'css/admin_styles.css' %}" rel="stylesheet" />
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
     </head>
     {% block content %}
     {% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-    <script src="{% static 'js/scripts.js' %}"></script>
+    <script src="{% static 'js/admin_scripts.js' %}"></script>
     </html>
+    {% else %}
+     No esta logeado
+    {% endif %}
