--- a/templates/profiles/base_admin.html
+++ b/templates/profiles/base_admin.html
@@ -47,7 +47,7 @@
                                 <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                                 Articulos
                             </a>
-                            <a class="nav-link collapsed" href="/drafts/" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
+                            <a class="nav-link" href="/drafts/">
                                 <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                                 Borradores
                             </a>
