--- a/templates/blog/about.html
+++ b/templates/blog/about.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-        <!-- Page Header-->
+      <!-- Page Header-->
         <header class="masthead" style="background-image: url({% static 'assets/img/about-bg.jpg' %})">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 text-align-left">
@@ -19,62 +19,60 @@
             </div>
         </header>
 
-           
-                                    
-        <!--  Sección grupo -->
-        <main class="mb-4">
-            <div class="container px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-md-10 col-lg-8 col-xl-7">
-                        <p><strong>Technómada</strong> surge como propuesta de trabajo final para el curso de Python (orientado al desarrollo web) dictado por Coderhouse.</p>
-                        <br>
-                        <p style="text-align:center"><strong>Equipo de desarrollo</strong></p>
-                        <br>
-                        <br>
+        <br>
 
-                        <div class="row row-cols-1 row-cols-md-3 g-4">
-                            <div class="col">
-                              <div class="card h-100">
-                                <img class="img-fluid rounded-circle mb-4 px-4"
-                                        src="https://i.postimg.cc/XYbxpN8H/avatar-default.jpg"
-                                        width="200" height="50" alt="..." />
-                                <div class="card-body">
-                                  <h5 style="text-align:center" class="card-title">Gino Frigoni</h5>
-                                  <p style="text-align:center" class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="col">
-                              <div class="card h-100">
-                                <img class="img-fluid rounded-circle mb-4 px-4"
-                                        src="https://i.postimg.cc/Y0Cb2dzp/profile-ye-2.jpg"
-                                        width="200" height="50" alt="..." />
-                                <div class="card-body">
-                                  <h5 style="text-align:center" class="card-title">Yessica Roser</h5>
-                                  <p style="text-align:center" class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="col">
-                              <div class="card h-100">
-                                <img class="img-fluid rounded-circle mb-4 px-4"
-                                        src="https://i.postimg.cc/XYbxpN8H/avatar-default.jpg"
-                                        width="200" height="50" alt="..." />
-                                
-                                <div class="card-body">
-                                  <h5 style="text-align:center" class="card-title">Constanza Morales</h5>
-                                  <p style="text-align:center" class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-
-                </div>
+      <!-- Title- team-->
+      <div class="container px-4 px-lg-5">
+        <div class="row gx-4 gx-lg-5 justify-content-center">
+            <div class="col-md-8 grid text-center">
+                <p class="about-title" style="text-align:center"><strong>Equipo de desarrollo</strong></p>
+                <p class="about-description"><strong>Technómada</strong> surge como propuesta de trabajo final para el curso de Python (orientado al desarrollo web) dictado por Coderhouse.</p>
+                <br>
+                
             </div>
+        </div>
+      </div>
 
-            
-        </main>
+      <!-- Title- team-->
+      <div class="container">
+        <div class="row grid text-center">
+          <div class="col-sm">
+             <div class="card h-100">
+              <img class="img-fluid rounded-circle mx-auto px-4"
+                      src="https://i.postimg.cc/XYbxpN8H/avatar-default.jpg"
+                      width="200" height="50" alt="..." />
+              <div class="card-body">
+                <h5 style="text-align:center" class="card-title">Gino Frigoni</h5>
+                <p style="text-align:center" class="card-text">Lorem ipsum dolor sit amet, <br> consectetur adipiscing elit.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm">
+            <div class="card h-100">
+              <img class="img-fluid rounded-circle mx-auto px-4"
+                      src="https://i.postimg.cc/XYbxpN8H/avatar-default.jpg"
+                      width="200" height="50" alt="..." />
+              <div class="card-body">
+                <h5 style="text-align:center" class="card-title">Yessica Roser</h5>
+                <p style="text-align:center" class="card-text">Estudiante de Diseño Industrial, <br> aprendiendo a programar.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm">
+            <div class="card h-100">
+              <img class="img-fluid rounded-circle mx-auto px-4"
+                      src="https://i.postimg.cc/XYbxpN8H/avatar-default.jpg"
+                      width="200" height="50" alt="..." />
+              <div class="card-body">
+                <h5 style="text-align:center" class="card-title">Constanza Morales</h5>
+                <p style="text-align:center" class="card-text">Lorem ipsum dolor sit amet, <br> consectetur adipiscing elit.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <br><br>
+
         
             <!-- Bootstrap core JS-->
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
