--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -57,7 +57,7 @@
                                 <a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'signup' %}">Sign Up</a>
                             </li>
                             <li class="nav-item">
-                                <a type="button" class="nav-link px-lg-3 py-3 py-lg-4 border border-light" href="{% url 'login' %}">Login</a>
+                                <a type="button" class="nav-link px-lg-2 py-2 py-lg-4" href="{% url 'login' %}">Login</a>
                             </li>
                         {% endif %}
                     </ul>
@@ -69,8 +69,7 @@
 
     {% block content %}
 
-    <!--
-        <!-- Page Header-->
+    <!-- Page Header-->
         <header class="masthead" style="background-image: url({% static 'assets/img/ruta-40.jpg' %})">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
@@ -105,9 +104,9 @@
             </div>
         </div>
      <!-- /.sidebar -->
-  </aside>
+    </aside>
 
-        <!-- Main Content-->
+    <!--  Main Content-->
         <div class="container px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-md-10 col-lg-8 col-xl-7">
@@ -170,6 +169,7 @@
             </div>
         </div>
 
+
     {% endblock content %}
     
         <!-- Footer-->
@@ -182,10 +182,11 @@
                 </div>
             </div>
         </footer>
+
         <!-- Bootstrap core JS-->
-        <script src='{% static "https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" %'></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src='{% static "js/scripts.js" %}'></script>
+        <script src="js/scripts.js"></script>
         
         <!-- CKEDITOR-->
         <script type="text/javascript">
