--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -34,6 +34,18 @@
                 </div>
             </div>
 
-        
+    <!-- Pagination-->
+    <br>
+    <nav aria-label="Main">
+        <ul class="pagination pagination-sm justify-content-center">
+          <li class="page-item active" aria-current="page">
+            <span class="page-link">1</span>
+          </li>
+          <!--<li class="page-item"><a class="page-link" href="#">2</a></li>-->
+        </ul>
+    </nav>
+    <br>
+    <br>
+    
 
 {% endblock content %}
