cambios en home y comentarios

--- a/templates/blog/about.html
+++ b/templates/blog/about.html
@@ -43,7 +43,7 @@
                       width="200" height="50" alt="..." />
               <div class="card-body">
                 <h5 style="text-align:center" class="card-title">Gino Frigoni</h5>
-                <p style="text-align:center" class="card-text">Lorem ipsum dolor sit amet, <br> consectetur adipiscing elit.</p>
+                <p style="text-align:center" class="card-text">Programador <br> & Entusiasta</p>
               </div>
             </div>
           </div>
