--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -11,7 +11,7 @@
         <title>Technómada</title>
         <link rel="shortcut icon" type="image/x-icon" href="{% static 'assets/favicon.ico' %}"/>
         <!-- Font Awesome icons (free version)-->
-        <script src='{% static "https://use.fontawesome.com/releases/v6.1.0/js/all.js" %}' crossorigin="anonymous"></script>
+        <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
@@ -186,7 +186,7 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="{% static 'js/scripts.js' %}"></script>
         
         <!-- CKEDITOR-->
         <script type="text/javascript">
