--- a/templates/blog/comment_form.html
+++ b/templates/blog/comment_form.html
@@ -1,18 +1,46 @@
+
 {% extends "blog/base.html" %}
 {% load static %}
-
 {% block content %}
 
+
     {% if user.is_authenticated %}
-        <h1>Nuevo comentario</h1>
-        <form class="post-form" method="post">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit" class="btn btn-primary">Publicar comentario</button>
-        </form>
-        <script>let editor = new MediumEditor('.editable');</script>
-        
+    <!-- Page Header-->
+            <header class="masthead" style="background-image: url({% static 'assets/img/notebook.jpg' %})">
+                <div class="container position-relative px-4 px-lg-5">
+                    <div class="row gx-4 gx-lg-5 justify-content-center">
+                        <div class="col-md-10 col-lg-8 col-xl-7">
+                            <div class="page-heading">
+                                <h1>Comentario</h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </header>
+            <br>
+            <body class="bg-primary">
+                <div id="layoutAuthentication">
+                    <div id="layoutAuthentication_content">
+                        <main>
+                            <div class="container">
+                                <div class="row justify-content-center">
+                                    <div class="col-lg-10">
+                                        <div class="card shadow-lg border-0 rounded-lg mt-5">
+                                            <div class="card-body">
+
+                                            <div class="=form-group">
+                                                <form method="POST" enctype="multipart/form-data">
+                                                    {% csrf_token %}
+
+                                                    {{ form.as_p }}
+                                                    <button type="submit" class="btn btn-primary">Publicar comentario</button>
+                                                </form>
+                                                <script>let editor = new MediumEditor('.editable');</script>                                            </div>
+
+            
     {% endif %}
 
-    
-{% endblock content%}
+{% endblock content %}
+
+
+
