--- a/templates/blog/about.html
+++ b/templates/blog/about.html
@@ -39,7 +39,7 @@
           <div class="col-sm">
              <div class="card h-100">
               <img class="img-fluid rounded-circle mx-auto px-4"
-                      src="https://i.postimg.cc/XYbxpN8H/avatar-default.jpg"
+                      src="https://avatars.githubusercontent.com/u/1947799?v=4"
                       width="200" height="50" alt="..." />
               <div class="card-body">
                 <h5 style="text-align:center" class="card-title">Gino Frigoni</h5>
@@ -50,7 +50,7 @@
           <div class="col-sm">
             <div class="card h-100">
               <img class="img-fluid rounded-circle mx-auto px-4"
-                      src="https://i.postimg.cc/XYbxpN8H/avatar-default.jpg"
+                      src="https://mir-s3-cdn-cf.behance.net/user/276/53311f599606291.6253aad41f01c.jpg"
                       width="200" height="50" alt="..." />
               <div class="card-body">
                 <h5 style="text-align:center" class="card-title">Yessica Roser</h5>
